# Group-B-Robot-War

./: .gitignore  CMakeLists.txt  config.txt  main.cpp
logs/: 1.txt  2.txt  3.txt  4.txt
misc/: ConfigReader.cpp  ConfigReader.h  battleground.cpp  battleground.h  cell.cpp  cell.h  logger.cpp  logger.h  randomizer.cpp  randomizer.h
robots/: GenericRobot.cpp  GenericRobot.h  robot.cpp  robot.h
robots/classes/: MovingRobot.cpp  MovingRobot.h  SeeingRobot.cpp  SeeingRobot.h  ShootingRobot.cpp  ShootingRobot.h  ThinkingRobot.cpp  ThinkingRobot.h  robot.cpp  robot.h
